contact responsive and tab

--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar</title>
+    <title>Sash</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+One&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/logo.jpeg" type="image/x-icon" />
     
 
 </head>
