--- a/Index.html
+++ b/Index.html
@@ -60,15 +60,15 @@
                 <div class="line2"></div>
             </div>
 
-            <p>Aamir and Hameeda Interior Designers (AANDH) deliver chic, refined interiors with luxurious finishes and
-                occasional bursts of daring colour or modern geometrics. AANDH is headed by the husband wife duo Aamir
-                and Hameeda. Their extensive and versatile body of work ranges from interior design of residences,
-                corporate offices, retail stores and hospitality spaces. They have in the past decade of practice won up
-                to 20 National and Regional Awards for Excellence in Design including the Hafele Trends Excellence Award
-                in Interior Design in 2016 and 2017 and have won many National and Regional Awards by IIID.</p>
-            <p>Their minimalistic, urban chic deigns make them stand apart in the residential and retail space design.
-                They make use of a lot of salvaged recyclable material in their various projects and reinterpret them
-                with a quirky and contemporary design sensibility.</p>
+            <p>
+                Your desired space, our expertise.
+                Founded in 2024, Sash Design Studio is an interior designing firm that creates tailored solutions for homes and businesses. With an emphasis on functionality, beauty, and sustainability, we design spaces that are not only stunning but also livable.
+                
+                Our approach is centered on collaboration, ensuring that your style and lifestyle are seamlessly integrated into every room.
+                
+                At Sash Design Studio, we are passionate about crafting unique and functional spaces that elevate our clients' living and working experiences. With a focus on minimalistic and contemporary designs, we strive to bring creativity and elegance to every project we undertake.
+                Our experienced designers and consultants work closely with our clients to understand their vision and preferences, translating them into stunning realities that exceed expectations.</p>
+            <p>At Sash Design Studio, we believe every space tells a story, and our mission is to help you craft yours. By blending creativity, innovation, and sustainability, we design spaces that are both beautiful and functional. Whether it’s a home or workplace, we strive to create timeless designs that reflect your style and enhance your daily life.</p>
         </div>
         <div class="dots"></div>
         <div class="about-us-image">
@@ -224,9 +224,14 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h2>Contact Us</h2>
-                    <p>Email, call, or complete the form to learn how Snappy can solve your messaging problem.</p>
-                    <p>info@snappy.io</p>
-                    <p>321-221-231</p>
+                    <p >Email, call, or complete the form to learn how Snappy can solve your messaging problem.</p>
+                    <p><img src="images/mail (4).png" alt="email Icon" />deekshitha@sashdesignstudio.in</p>
+                    <p><img src="images/telephone (1).png" alt="phone Icon" />+91 9391869400 </p>
+                    <p>
+                        <a href="https://www.instagram.com/sash_design_studio?igsh=b2dycXJiN2Joa3Q=" target="_blank">
+                            <img src="images/instagram (2).png" alt="Instagram Icon" />
+                        </a> SASH DESIGN STUDIO
+                    </p>
                 </div>
                 <div class="contact-form">
                     <h2>Get in Touch</h2>
@@ -237,7 +242,7 @@
                             <input type="text" placeholder="Last name" />
                         </div>
                         <div class="form-group">
-                            <input type="email" placeholder="Your email" />
+                            <input type="email" placeholder="Email" />
                             <div class="phone-number">
                                 <select>
                                     <option value="+62">+62</option>
@@ -277,7 +282,7 @@
                 <div class="footer-section">
                     <h3>Social</h3>
                     <ul>
-                        <li><a href="#">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/sash_design_studio?igsh=b2dycXJiN2Joa3Q=">Instagram</a></li>
                         <li><a href="#">LinkedIn</a></li>
                         <li><a href="#">YouTube</a></li>
                     </ul>
