--- a/Index.html
+++ b/Index.html
@@ -134,23 +134,24 @@
         <div class="services-container">
             <div class="service-item">
                 <img src="images/light - Copy (2).png" alt="Lighting Design Icon" />
-                <h3>Lighting Design</h3>
-                <p>We provide comprehensive lighting solutions for various needs.</p>
+                <h3>Residential Interior Design</h3>
+                <p>We design homes that reflect our clients' personalities, creating stylish, functional spaces that enhance comfort and meet their needs.</p>
             </div>
             <div class="service-item">
                 <img src="images/interior-design (1) - Copy.png" alt="Design Icon" />
-                <h3>Interior Design</h3>
-                <p>Our team creates inspiring and functional interior spaces.</p>
+                <h3>Commercial Design</h3>
+                <p>We design commercial spaces that blend functionality and aesthetics, promoting productivity and reflecting the brand identity of each business.</p>
             </div>
             <div class="service-item">
                 <img src="images/consulting.png" alt="Consulting Icon" />
-                <h3>Consulting</h3>
-                <p>Expert advice tailored to your unique requirements.</p>
+                <h3>Renovation</h3>
+                <p>Revitalizing Designs
+                    Renovating spaces to breathe new life into existing structures is a challenge we embrace. Our renovation projects aim to transform spaces while preserving their essence and history</p>
             </div>
             <div class="service-item">
                 <img src="images/staircase.png" alt="Consulting Icon" />
-                <h3>Commercial Design</h3>
-                <p>We design commercial spaces that boost productivity and reflect brand identity. </p>
+                <h3>Consultation & Styling</h3>
+                <p>Need a fresh perspective? We offer expert guidance to help you create the perfect look for your space. </p>
             </div>
 
         </div>
@@ -165,16 +166,14 @@
             <div class="testimonial-cards">
                 <div class="testimonial-card">
                     <div class="card-decor"></div>
-                    <h3>Delouse S.</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.</p>
+                    <h3>T.Keerthy</h3>
+                    <p>Sash Design Studio exceeded my expectations with their creativity and attention to detail. Their designs are stunning, functional, and tailored perfectly to my needs. Highly recommend for anyone looking to transform their space effortlessly!</p>
                 </div>
                 <div class="testimonial-card">
                     <div class="card-decor"></div>
-                    <h3>Alan Delouse S.</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard.</p>
+                    <h3>G.Sowmya</h3>
+                    <p>I absolutely loved the work. I would definitely recommend Sash Design Studio to  anyone. They were very professional and made the entire experience amazing. The best part is that they clearly understood our requirements and budget and provided the best possible home interiors with best quality material.
+                        Thank you Team Sash.</p>
                 </div>
                 <div class="testimonial-card">
                     <div class="card-decor"></div>
@@ -182,26 +181,8 @@
                     <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's standard dummy text ever since the 1500s.</p>
                 </div>
-                <div class="testimonial-card">
-                    <div class="card-decor"></div>
-                    <h3>Delouse S.</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.</p>
-                </div>
-                <div class="testimonial-card">
-                    <div class="card-decor"></div>
-                    <h3>Debrave S.</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.</p>
-                </div>
-                <div class="testimonial-card">
-                    <div class="card-decor"></div>
-                    <h3>Malcom Clementa</h3>
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s.</p>
-                </div>
+               
+               
             </div>
         </div>
     </section>
