--- a/Index.html
+++ b/Index.html
@@ -76,6 +76,21 @@
             <img src="images/sunnyakka.png" alt="About Us Image">
         </div>
     </section>
+    <div class="section-title1">Our Projects
+        <div class="line3"></div>
+    </div>
+    <section class="carousel">
+       
+        <div class="slides">
+          <img src="../images/pic8.jpg" alt="Slide 1">
+          <img src="../images/pic9.jpg" alt="Slide 2">
+          <img src="../images/pic10.jpg" alt="Slide 3">
+        </div>
+        
+        <!-- Arrow buttons for navigation -->
+        <button class="arrow prev">❮</button>
+        <button class="arrow next">❯</button>
+      </section>
     <section class="our-work">
         <div class="container">
             <div class="section-title">Our Work
